assets/css/main.css
/*
	Identity by HTML5 UP
	html5up.net | @ajlkn
	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
*/

/* Basic */

	@media screen and (max-width: 480px) {

		html, body {
			min-width: 320px;
		}

	}

	html {
		box-sizing: border-box;
	}

	*, *:before, *:after {
		box-sizing: inherit;
	}

	body.is-preload *, body.is-preload *:before, body.is-preload *:after {
		-moz-animation: none !important;
		-webkit-animation: none !important;
		-ms-animation: none !important;
		animation: none !important;
		-moz-transition: none !important;
		-webkit-transition: none !important;
		-ms-transition: none !important;
		transition: none !important;
	}

	html {
		height: 100%;
	}

	body {
		height: 100%;
		background-color: #d3d3d3;
		background-repeat: repeat, no-repeat, no-repeat;
		background-size: 100px 100px, cover, cover;
		background-position: top left, center center, bottom center;
		background-attachment: fixed, fixed, fixed;

	}

		body:after {
			content: '';
			display: block;
			position: fixed;
			top: 0;
			left: 0;
			width: 100%;
			height: inherit;
			opacity: 0;
			z-index: 1;
			background-color: #aaaaaa;
			background-repeat: repeat, no-repeat;
			background-size: 100px 100px, cover;
			background-position: top left, center center;
			-moz-transition: opacity 1.5s ease-out;
			-webkit-transition: opacity 1.5s ease-out;
			-ms-transition: opacity 1.5s ease-out;
			transition: opacity 1.5s ease-out;
		}

		body.is-preload:after {
			opacity: 1;
		}

/* Type */

	body {
		color: #454545;
		font-family: Helvetica, sans-serif;
		font-size: 16pt;
		font-weight: 300;
		line-height: 1;
		letter-spacing: 0.1em;
		text-transform: uppercase;
	}

		@media screen and (max-width: 1680px) {

			body {
				font-size: 12pt;
			}

		}

		@media screen and (max-width: 480px) {

			body {
				font-size: 10pt;
				line-height: 1.75;
			}

		}

	a {
		-moz-transition: color 0.2s ease, border-color 0.2s ease;
		-webkit-transition: color 0.2s ease, border-color 0.2s ease;
		-ms-transition: color 0.2s ease, border-color 0.2s ease;
		transition: color 0.2s ease, border-color 0.2s ease;
		color: inherit;
		text-decoration: none;
	}

		a:before {
			-moz-transition: color 0.2s ease, text-shadow 0.2s ease;
			-webkit-transition: color 0.2s ease, text-shadow 0.2s ease;
			-ms-transition: color 0.2s ease, text-shadow 0.2s ease;
			transition: color 0.2s ease, text-shadow 0.2s ease;
		}

		a:hover {
			color: #3cb371;
		}

	h1 {
		font-size: 2.5em;
		font-weight: bold;
		letter-spacing: 0.28em;
		margin: .525em 0 .525em 0;
	}

	@media screen and (max-width: 480px) {

		h1 {
			font-size: 1.65em;
		}

	}

/* List */

	ul {
		list-style: disc;
		margin: 0 0 1em 0;
	}

		ul li {
			font-size: 1em;
			font-weight: bold;
		}

/* Main */

	#main {
		-moz-transform-origin: 50% 50%;
		-webkit-transform-origin: 50% 50%;
		-ms-transform-origin: 50% 50%;
		transform-origin: 50% 50%;
		-moz-transform: rotateX(0deg);
		-webkit-transform: rotateX(0deg);
		-ms-transform: rotateX(0deg);
		transform: rotateX(0deg);
		-moz-transition: opacity 1s ease, -moz-transform 1s ease;
		-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
		-ms-transition: opacity 1s ease, -ms-transform 1s ease;
		transition: opacity 1s ease, transform 1s ease;
		padding: 4.5em 3em 3em 3em ;
		background: #eeeeee;
		border-radius: 4px;
		cursor: default;
		max-width: 100%;
		opacity: 0.95;
		position: relative;
		text-align: center;
		width: 35em;
	}

		#main .avatar {
			position: relative;
			display: block;
			margin-bottom: 1.5em;
		}

			#main .avatar img {
				display: block;
				margin: 0 auto;
				border-radius: 100%;
				box-shadow: 0 0 0 .25em #d3d3d3;
			}

			#main .avatar:before {
				content: '';
				display: block;
				position: absolute;
				top: 50%;
				left: -3em;
				width: calc(100% + 6em);
				height: 3px;
				z-index: -1;
				background: #eeeeee;
			}

		@media screen and (max-width: 480px) {

			#main {
				padding: 4em 2em 2.5em 2em ;
				width: 100%;
			}

				#main .avatar:before {
					left: -2em;
					width: calc(100% + 4em);
				}
		}

		body.is-preload #main {
			-moz-transform: rotateX(15deg);
			-webkit-transform: rotateX(15deg);
			-ms-transform: rotateX(15deg);
			transform: rotateX(15deg);
			opacity: 0;
		}

	#main .links {
		text-align: center;
		padding: .5em 1.6em 0 0;
		font-size: .9em;
	}

		#main .links li {
			display: inline-block;
			padding: 0 .25em 0 .75em;
			border-left: solid 2px rgba(105, 105, 105, 0.4);
			line-height: 1;
		}

			#main .links li:first-child {
				border-left: 0;
			}
	}

/* Footer */

	#footer {
		-moz-align-self: -moz-flex-end;
		-webkit-align-self: -webkit-flex-end;
		-ms-align-self: -ms-flex-end;
		align-self: flex-end;
		width: 100%;
		padding: 1.5em 0 0 0;;
		cursor: default;
		text-align: center;
	}

		#footer .copyright {
			margin: 0;
			padding: 0;
			font-size: 0.8em;
			list-style: none;
		}

			#footer .copyright li {
				display: inline-block;
				margin: 0 0 0 0;
				padding: 0 1em 0 1.25em;
				border-left: solid 2px rgba(105, 105, 105, 0.5);
				line-height: 1;
			}

				#footer .copyright li:first-child {
					border-left: 0;
				}

/* Wrapper */

	#wrapper {
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-align-items: center;
		-webkit-align-items: center;
		-ms-align-items: center;
		align-items: center;
		-moz-justify-content: space-between;
		-webkit-justify-content: space-between;
		-ms-justify-content: space-between;
		justify-content: space-between;
		-moz-flex-direction: column;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;
		flex-direction: column;
		-moz-perspective: 1000px;
		-webkit-perspective: 1000px;
		-ms-perspective: 1000px;
		perspective: 1000px;
		position: relative;
		min-height: 100%;
		padding: 1.5em;
		z-index: 2;
	}

		#wrapper > * {
			z-index: 1;
		}

		#wrapper:before {
			content: '';
			display: block;
		}

		@media screen and (max-width: 360px) {

			#wrapper {
				padding: 0.75em;
			}

		}

		body.is-ie #wrapper {
			height: 100%;
		}

